- Mean time in system experiment changes